fix: dialog content overflow

--- a/src/components/Dialog/Dialog.scss
+++ b/src/components/Dialog/Dialog.scss
@@ -9,7 +9,4 @@
   left: 50%;
   top: 50%;
   translate: -50% -50%;
-  &:focus-visible {
-    outline: none;
-  }
 }
