--- a/src/components/Task/AddOrEditTask.scss
+++ b/src/components/Task/AddOrEditTask.scss
@@ -3,6 +3,7 @@
 .add-or-edit-task {
   @include set-dynamic-width-of-dialog();
   max-height: 900px;
+  overflow: auto;
   background-color: var(--kb-color-white);
   @include dark {
     background-color: var(--kb-color-dark-gray);
@@ -129,8 +130,4 @@
   padding: 8px 16px;
   border-radius: 4px;
   border: 1px solid #828fa33f;
-  outline: none;
-  &:focus-visible {
-    border: 1px solid var(--kb-color-main-purple);
-  }
 }
